修改：     camera/Makefile 	修改：     camera/camera 	新文件：   camera/capture 	新文件：   camera/capture.c 	删除：     camera/cscope.in.out 	修改：     camera/cscope.out 	删除：     camera/cscope.po.out 	删除：     camera/header.h 	删除：     camera/init.c 	删除：     camera/init.h 	删除：     camera/lab_v4l2_yuyv/tags 	删除：     camera/lab_v4l2_yuyv/test 	删除：     camera/lab_v4l2_yuyv/test2 	删除：     camera/lab_v4l2_yuyv/v4l2grab.c 	删除：     camera/lab_v4l2_yuyv/v4l2grab.h 	删除：     camera/lab_v4l2_yuyv/v4l2grab_Anysize.c 	删除：     camera/lab_v4l2_yuyv/zed-camera 删除：     camera/main.c 	修改：     camera/picture/image.bmp 	修改：     camera/picture/image.yuv 	修改：     camera/tags 	新文件：   camera/v4l2grab.c 	删除：     camera/video_capture.c 	删除：     camera/video_capture.h

--- a/camera/Makefile
+++ b/camera/Makefile
@@ -1,3 +1,6 @@
-SRC = main.c init.c video_capture.c
-camera : $(SRC) *.h 
+SRC = capture.c
+camera : $(SRC) 
 	gcc -g -o camera $(SRC)
+
+clean :
+	rm camera
