修改：     Makefile 	新文件：   configure 	新文件：   configure.c 	新文件：   configure.o 	新文件：   gprs/.wvdial.config.swp 	删除：     gprs/usb1.config 	重命名：   gprs/usb0.config -> gprs/wvdial.config 	修改：     main.c

--- a/gprs/wvdial.config
+++ b/gprs/wvdial.config
@@ -1,7 +1,4 @@
-[Dialer Defaults]
-Modem=/dev/ttyUSB0
-Baud=9600
-Phone=*99***1#
+Modem=/dev/ttyUSB1*1#
 Init1=ATZ
 Init2=ATQ0 V1 E1 S0=0 &C1 &D2 S11=55 +FCLASS=0
 Username=a
