修改：     camera/Makefile 	新文件：   camera/camera 	修改：     camera/capture.c 	删除：     camera/send_pictrue.c 	新文件：   camera/send_picture.sh 	新文件：   camera/test.c 	新文件：   camera/test.jpeg 	新文件：   camera/test.yuv 	删除：     camera/v4l2grab.c

--- a/camera/Makefile
+++ b/camera/Makefile
@@ -1,6 +1,6 @@
 SRC = capture.c
 camera : $(SRC) 
-	gcc -g -o camera $(SRC)
+	gcc -g -o camera $(SRC) -ljpeg
 
 clean :
-	rm camera
+	rm camera send_picture
